--- a/index.css
+++ b/index.css
@@ -6,8 +6,6 @@ body{
     color: #CBCBCB;
     font-family: "Inter", sans-serif;
     margin: 0;
-    width: 100vw;
-    height: 100vh;
 }
 
 
@@ -16,6 +14,7 @@ body{
     align-items: center;
     justify-content: space-between;
 }
+
 .top-section button{
     margin-right: 50px;
     border: none;
@@ -27,9 +26,17 @@ body{
     font-size: 24px;
     line-height: 29px;
     letter-spacing: 0.06em;
+    transition: transform 0.3s,background-color 0.3s, color 0.3s;
+    padding: 10px;
+}
+.top-section button:hover{
+    background-color: #121212;
+    color: white;
+    transform: translateY(-10px)
 }
 
 .top-section h1{
+
     margin-left: 20px ;
     font-family: 'Inter';
     font-style: italic;
@@ -39,13 +46,14 @@ body{
     letter-spacing: 0.06em;
 }
 .seperator{
-    margin: 100px;
+    margin: 20px;
 }
 
-.middle-part{
-    display: grid;
-    grid-template-columns: 1000px 900px;
-    grid-template-rows: repeat(1, 500px);
+.middle-part {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    
 }
 .middle-part h2{
     text-align: center;
@@ -55,12 +63,13 @@ body{
     font-size: 32px;
     line-height: 39px;
     letter-spacing: 0.06em;
+    max-width: 50%;
     }
 
 .images{
     display: grid;
-    grid-template-columns: repeat(3, 290px);
-    grid-template-rows: repeat(3, 155px);
+    grid-template-columns: repeat(3, minmax(auto, auto));
+    
 }
 
 h2{
@@ -74,7 +83,16 @@ h2{
     padding: 10px;
     margin: 10px;
     border-radius: 94px;
+
+    transition: transform 0.3s,background-color 0.3s, color 0.3s;
 }
+
+.pic1:hover{
+    background-color: white;
+    color: black;
+    transform: translateY(-10px)
+}
+
 .images h2{
     color: #1E1E1E;
 
@@ -92,14 +110,14 @@ h2{
     bottom: 0px;
     left: 0px;
     width: 100%;
+    z-index: 1;
     background-color: #121212;
+
     text-align: center;
     font-family: 'Inter';
     font-style: italic;
     font-weight: 200;
-    font-size: 20px;
-    line-height: 44px;
-
-
-
+    font-size: 16px;
+    line-height: 18px;
 }
+
